fix: menu dropdown overflow

--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -30,11 +30,15 @@
     .mobile-search{
       display: block;
     }
+    .dropdown-menu{
+      max-width: 100% !important;
+    }
   }
 
   .dropdown-menu{
     margin-top: 15px;
     overflow: hidden;
+    max-width: 255px;
   }
 
   .dropdown-shadow{
